--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -2,6 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github"
+      },
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/AI-Nios/Nios-stable-diffusion-webui-colab-japan/blob/main/Nios_Model_Card_Selection%20.ipynb)"
+      ]
+    },
+},
+
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
       "source": [
         "**0.最初にランタイムの設定をGPUに変更してく\n",
         "ださい**<br>\n",
