Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -501,12 +501,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "▼学習済みファイルの検索<br>\n",
+        "[HuggingFace](https://huggingface.co/)<br>\n",
+        "[Civitai](https://civitai.com/)<br><br>\n",
         "**人の著作物を勝手にi2iしてネットにあげる行為は絶対に止めてください**<br>\n",
         "<br>\n",
         "複数選びたい場合は選択し直して再度実行<br>\n",
         "1以外は何回実行しても構いません<br>\n",
         "頻繁にモデルを切り替えるとエラーが発生します<br>\n",
-        "Hires.fixは負担が大きいので設定には注意してください"
+        "Hires.fixは負担が大きいので設定には注意してください\n"
       ],
       "metadata": {
         "id": "r2DmT0JqVIYG"
@@ -515,18 +518,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "▼より多くのモデル<br>\n",
-        "https://github.com/camenduru/stable-diffusion-webui-colab<br>\n",
+        "▼Colabページの説明<br>\n",
+        "[stable-diffusion-webui-colab-japanese](https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese)<br>\n",
         "<br>\n",
-        "▼元の記事<br>\n",
-        "https://note.com/ai_nios/n/n0826a33edc8a<br>\n",
+        "▼記事<br>\n",
+        "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
         "<br>\n",
         "▼不具合で起動できない時<br>\n",
-        "https://colab.research.google.com/github/AI-Nios/Nios-stable-diffusion-webui-colab-japan/blob/main/Nios_v3.ipynb<br><br>\n",
+        "[Nios_v3.ipynb](https://colab.research.google.com/github/AI-Nios/Nios-stable-diffusion-webui-colab-japan/blob/main/Nios_v3.ipynb)<br>\n",
+        "<br>\n",
         "▼ColabでLoRA学習したい人向け<br>\n",
-        "https://seesaawiki.jp/nai_ch/d/kohya_train_network_simple<br>\n",
+        "[あかちゃんLoRAノートブック](https://seesaawiki.jp/nai_ch/d/kohya_train_network_simple)<br>\n",
         "もしくはこちら<br>\n",
-        "https://www.youtube.com/watch?v=OzDW0_sCwEw&t=67s&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88\n"
+        "[【Stable Diffusion】Loraモデル学習をGoogle Colabで作る方法解説。](https://www.youtube.com/watch?v=OzDW0_sCwEw&t=67s&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)\n"
       ],
       "metadata": {
         "id": "4iNjTp_bGOpO"
