--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -519,11 +519,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "▼元の記事<br>\n",
-        "https://note.com/ai_nios/n/n0826a33edc8a\n",
-        "<br><br>\n",
-        "https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese"
+        "**[Nios_v2.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)**<br> \n",
+        "▼学習済みファイルの検索<br>\n",
+        "[HuggingFace](https://huggingface.co/)<br>\n",
+        "[Civitai](https://civitai.com/)<br><br>\n",
+        "▼Colabページの説明<br>\n",
+        "[stable-diffusion-webui-colab-japanese](https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese)<br>\n",
+        "<br>\n",
+        "▼記事<br>\n",
+        "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
+        "<br>\n",
+        "▼ColabでLoRA学習したい人向け<br>\n",
+        "[あかちゃんLoRAノートブック](https://seesaawiki.jp/nai_ch/d/kohya_train_network_simple)<br>\n",
+        "もしくはこちら<br>\n",
+        "[【Stable Diffusion】Loraモデル学習をGoogle Colabで作る方法解説。](https://www.youtube.com/watch?v=OzDW0_sCwEw&t=67s&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)"
       ],
       "metadata": {
         "id": "4iNjTp_bGOpO"
