--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -279,13 +279,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "▼より多くのモデル<br>\n",
-        "https://github.com/camenduru/stable-diffusion-webui-colab<br>\n",
-        "<br>\n",
         "▼使い方<br>\n",
-        "https://note.com/ai_nios/n/n0826a33edc8a<br><br>\n",
+        "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
+        "<br>\n",
+        "▼学習済みファイルの検索<br>\n",
+        "[HuggingFace](https://huggingface.co/)<br><br>\n",
+        "▼Colabページの説明<br>\n",
+        "[stable-diffusion-webui-colab-japanese](https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese)<br>\n",
+        "<br>\n",
         "▼上級者向け<br>\n",
-        "https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb<br>"
+        "[Nios_v2_update](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)<br>"
       ],
       "metadata": {
         "id": "4iNjTp_bGOpO"
