Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -81,7 +81,7 @@
       "source": [
         "#@title  2.モデル選択\n",
         "\n",
-        "model_name =\"ACertainThing\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\"] {allow-input: false}\n",
+        "model_name =\"ACertainThing\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
         "if model_name == \"stable_diffusion_v1.5\":\n",
         "  url1  = \"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\"\n",
         "  path1 = \"v1-5-pruned-emaonly.ckpt\"\n",
@@ -257,6 +257,15 @@
         "elif model_name == \"Balor-V2.5featAOM3A3\":\n",
         "  url1  = \"https://huggingface.co/ploughB660/Balor-V3/resolve/main/Balor-V2.5featAOM3A3.safetensors\"\n",
         "  path1 = \"Balor-V2.5featAOM3A3.safetensors\"\n",
+        "\n",
+        "\n",
+        "elif model_name == \"ChilloutMix\":\n",
+        "  url1  = \"https://civitai.com/api/download/models/11745\"\n",
+        "  path1 = \"ChilloutMix.safetensors\"\n",
+        "\n",
+        "elif model_name == \"wd-1-5-beta2\":\n",
+        "  url1  = \"https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-aesthetic-fp16.safetensors\"\n",
+        "  path1 = \"wd-1-5-beta2-aesthetic-fp16.safetensors\"\n",
         "\n",
         "else:\n",
         "  print(\"Invalid model name.\")\n",
@@ -519,8 +528,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**[Nios_v2.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)**<br> \n",
-        "▼学習済みファイルの検索<br>\n",
+        "**[Nios_v2.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)**<br><br> \n",
+        "▼学習済みモデルの検索<br>\n",
         "[HuggingFace](https://huggingface.co/)<br>\n",
         "[Civitai](https://civitai.com/)<br><br>\n",
         "▼Colabページの説明<br>\n",
