Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -352,7 +352,6 @@
       "cell_type": "code",
       "source": [
         "#@title  LoRA（任意）\n",
-        "#@markdown  4.WebUIの起動後に実行\n",
         "\n",
         "Lora_name =\"Anime_Screencap_Style_LoRA\" #@param [\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
@@ -423,7 +422,7 @@
         "else:\n",
         "  print(\"Invalid Lora name.\")\n",
         "\n",
-        "!wget $url3 -O $path3\n"
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url3 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $path3"
       ],
       "metadata": {
         "id": "QDG0oyNU6R1L",
