Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -61,7 +61,9 @@
         "!git clone -b v2.0 https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
         "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
         "!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-two-shot\n",
-        "!git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch"
+        "!git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch\n",
+        "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
+        "!git clone https://github.com/hallatore/stable-diffusion-webui-chatgpt-utilities /content/stable-diffusion-webui/extensions/stable-diffusion-webui-chatgpt-utilities"
       ],
       "metadata": {
         "id": "Ffo4Tysh4a8h",
@@ -322,9 +324,9 @@
       "cell_type": "code",
       "source": [
         "#@title　ControlNet（任意）\n",
-        "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
         "!git clone https://github.com/camenduru/openpose-editor /content/stable-diffusion-webui/extensions/openpose-editor\n",
         "!git clone https://github.com/Mikubill/sd-webui-controlnet.git /content/stable-diffusion-webui/extensions/sd-webui-controlnet\n",
+        "!git clone https://github.com/jexom/sd-webui-depth-lib /content/stable-diffusion-webui/extensions/sd-webui-depth-lib\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o control_canny-fp16.safetensors\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o control_depth-fp16.safetensors\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_hed-fp16.safetensors -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o control_hed-fp16.safetensors\n",
