--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -25,6 +25,7 @@
         "from google.colab.output import eval_js\n",
         "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
         "\n",
+        "!apt -y update -qq\n",
         "!wget http://launchpadlibrarian.net/367274644/libgoogle-perftools-dev_2.5-2.2ubuntu3_amd64.deb\n",
         "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/google-perftools_2.5-2.2ubuntu3_all.deb\n",
         "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libtcmalloc-minimal4_2.5-2.2ubuntu3_amd64.deb\n",
@@ -34,9 +35,10 @@
         "%env LD_PRELOAD=libtcmalloc.so\n",
         "!rm *.deb\n",
         "\n",
-        "!apt-get -y install -qq aria2\n",
-        "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.16/xformers-0.0.16+814314d.d20230118-cp38-cp38-linux_x86_64.whl\n",
+        "!apt -y install -qq aria2\n",
+        "!pip install -q --pre xformers\n",
         "!pip install -q --pre triton\n",
+        "\n",
         "#WebUIのインストール\n",
         "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
         "!git clone https://github.com/alemelis/sd-webui-ar.git /content/stable-diffusion-webui/extensions/sd-webui-ar\n",
@@ -515,9 +517,11 @@
       "cell_type": "code",
       "source": [
         "#@title  4.WebUIの起動\n",
-        "!sed -i -e '''/prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
+        "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
         "\n",
-        "!python launch.py --xformers --enable-insecure-extension-access --gradio-queue --cloudflared"
+        "!mkdir /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui/models\n",
+        "\n",
+        "!python launch.py --share --xformers --enable-insecure-extension-access --theme dark --gradio-queue --cloudflared"
       ],
       "metadata": {
         "id": "Pet8RD2Q6-4L",
