Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -36,7 +36,7 @@
         "!rm *.deb\n",
         "\n",
         "!apt -y install -qq aria2\n",
-        "!pip install -q --pre xformers\n",
+        "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.17/xformers-0.0.17+b6be33a.d20230315-cp39-cp39-linux_x86_64.whl\n",
         "!pip install -q --pre triton\n",
         "\n",
         "#WebUIのインストール\n",
@@ -57,6 +57,7 @@
       "source": [
         "#@title　WebUIの拡張機能（任意）\n",
         "#WebUIの拡張機能(Extensions)\n",
+        "!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui\n",
         "!git clone https://github.com/toshiaki1729/stable-diffusion-webui-dataset-tag-editor.git /content/stable-diffusion-webui/extensions/dataset-tag-editor\n",
         "!git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui /content/stable-diffusion-webui/extensions/sdweb-merge-block-weighted-gui\n",
         "!git clone -b v2.0 https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
@@ -281,7 +282,7 @@
       "source": [
         "#@title 3.VAE\n",
         "\n",
-        "vae_name =\"Anything-V3.0.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name =\"vae-ft-mse-840000-ema-pruned\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
         "\n",
         "if vae_name == \"vae-ft-mse-840000-ema-pruned\":\n",
         "  url2  = \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\" \n",
@@ -353,11 +354,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title  LoRA（任意）\n",
+        "#@title  LoRA・Textual Inversion（任意）\n",
         "\n",
-        "Lora_name =\"Anime_Screencap_Style_LoRA\" #@param [\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
+        "Lora_name =\"None\" #@param [\"None\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
-        "if Lora_name == \"Anime_Screencap_Style_LoRA\":\n",
+        "if Lora_name == \"None\":\n",
+        "  url3  = None \n",
+        "  path3 = None\n",
+        "\n",
+        "elif Lora_name == \"Anime_Screencap_Style_LoRA\":\n",
         "  url3  = \"https://civitai.com/api/download/models/5742\" \n",
         "  path3 = \"Anime_Screencap_Style_LoRA.safetensors\"\n",
         "\n",
@@ -424,20 +429,13 @@
         "else:\n",
         "  print(\"Invalid Lora name.\")\n",
         "\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url3 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $path3"
-      ],
-      "metadata": {
-        "id": "QDG0oyNU6R1L",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Textual Inversion（任意）\n",
-        "Textual_name =\"Corneo's Makima\"#@param [\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url3 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $path3\n",
+        "\n",
+        "Textual_name =\"None\"#@param [\"None\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "\n",
+        "if Textual_name == \"None\":\n",
+        "  url4  = None \n",
+        "  path4 = None\n",
         "\n",
         "if Textual_name == \"Corneo's Makima\":\n",
         "  url4  = \"https://civitai.com/api/download/models/6197\"\n",
@@ -505,7 +503,7 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $url4 -d /content/stable-diffusion-webui/embeddings -o $path4"
       ],
       "metadata": {
-        "id": "BboYHW-jEnb-",
+        "id": "QDG0oyNU6R1L",
         "cellView": "form"
       },
       "execution_count": null,
